[package]
name = "mosh-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mosh = { path = "../core" }
console = "0.14.1"
socket2 = "0.4.1"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread", "net", "time", "io-std", "io-util"] }
tracing-subscriber = "0.2.19"
tracing = "0.1.26"
thiserror = "1.0.26"
serde_json = "1.0.66"
xdg = "2.2.0"
