[package]
name = "jaw-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jaw = { path = "../core" }
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread", "net", "time", "io-std", "io-util", "sync", "process", "fs"] }
uuid = { version = "0.8.2", features = ["v4"] }
dashmap = "4.0.2"
thiserror = "1.0.26"
tracing-subscriber = "0.2.19"
tracing = "0.1.26"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
libc = "0.2.99"
